# dino-brick

./: .gitignore  README.md  dino.cabal  ghc-8.2.2-stack.yaml  ghc-8.4.4-stack.yaml  stack-lts-14.yaml  stack-lts-15.yaml  stack-lts-16.yaml  stack-lts-18.yaml  stack-nightly.yaml
.github/workflows/: cabal.yml  format.yml  lint.yml  stack.yml
app/: Main.hs
src/: Controls.hs  Dino.hs  UI.hs
