cabal-version:      2.4
name:               dino
version:            0.1.0.0
homepage:           https://github.com/arcticmatt/dino-brick
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matt Lim
maintainer:         mlimcollege@gmail.com
copyright:          Copyright: (c) 2017 Matt Lim
category:           Web
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==8.6.5 || ==8.8.2

common common
  build-depends:    base ^>=4.12
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Controls
    Dino
    UI

  build-depends:
    , brick         ^>=0.47
    , containers    ^>=0.6
    , linear        ^>=1.20
    , microlens     ^>=0.4
    , microlens-th  ^>=0.4
    , MonadRandom   ^>=0.5
    , random        ^>=1.1
    , vty           ^>=5.25

executable dino
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -Wall -fno-warn-unused-do-bind -O3
  build-depends:
    , dino
    , directory             ^>=1.3
    , filepath              ^>=1.4
    , optparse-applicative  ^>=0.14
