cabal-version:      2.4
name:               dino
version:            0.1.0.0
homepage:           https://github.com/arcticmatt/dino-brick
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matt Lim
maintainer:         mlimcollege@gmail.com
copyright:          Copyright: (c) 2017 Matt Lim
category:           Web
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.2

common common
  build-depends:    base >=4.12 && <4.15
  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Controls
    Dino
    UI

  build-depends:
    , brick         >=0.47 && <0.48 || >=0.52 && <0.58
    , containers    ^>=0.6
    , linear        ^>=1.21
    , microlens     ^>=0.4
    , microlens-th  ^>=0.4
    , MonadRandom   ^>=0.5
    , random        >=1.1  && <1.3
    , vty           >=5.25 && <5.33

executable dino
  import:        common
  main-is:       app/Main.hs
  ghc-options:   -O2
  build-depends:
    , dino
    , directory             ^>=1.3
    , filepath              ^>=1.4
    , optparse-applicative  >=0.14 && <0.17
